--- a/publication.html
+++ b/publication.html
@@ -62,7 +62,7 @@ td.papers {
   		<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
-						<span style="font-size: 12pt; font-family: Times New Roman;">
+						<span style="font-size: 12pt;">
 							<strong>A Large-Scale Study of Data Center Network Reliability </strong> [To appear]
 						<br>
 						Justin Meza, Tianyin Xu, Kaushik Veeraraghavan, and Yee Jiun Song
@@ -78,7 +78,7 @@ td.papers {
   		<td class="papers">
         <div align="justify" class="STYLE4">
           <p></p>
-						<span style="font-size: 12pt; font-family: Times New Roman;">
+						<span style="font-size: 12pt;">
 							<strong>Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently </strong> [To appear]
 						<br>
 						Kaushik Veeraraghavan, Justin Meza, Scott Michelson, Sankaralingam Panneerselvam, Alex Gyori, David Chou, Sonia Margulis, Daniel Obenshain, Ashish Shah, Yee Jiun Song, and Tianyin Xu
@@ -94,7 +94,7 @@ td.papers {
   		<td class="papers">
         <div align="justify" class="STYLE4">
           <p></p>
-		      <span style="font-size: 12pt; font-family: Times New Roman;">
+		      <span style="font-size: 12pt;">
 						<strong>Mining Container Image Repositories for Software Configurations and Beyond</strong> [<a href="papers/icse-nier18.pdf" target="_blank">pdf</a> | <a href="papers/icse-nier18.ps" target="_blank">ps</a> | <a href="papers/icse-nier18.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu and Darko Marinov
@@ -110,7 +110,7 @@ td.papers {
   		<td class="papers">
         <div align="justify" class="STYLE4">
           <p></p>
-		      <span style="font-size: 12pt; font-family: Times New Roman;">
+		      <span style="font-size: 12pt;">
 						<strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [<a href="papers/fast18.pdf" target="_blank">pdf</a> | <a href="papers/fast18.ps" target="_blank">ps</a> | <a href="papers/fast18.bib" target="_blank">bib</a>]
 						<br>
 						He Xiao, Zhenhua Li, Ennan Zhai, Tianyin Xu, Yang Li, Yonghe Wang, Quanlu Zhang, and Yao Liu
@@ -126,7 +126,7 @@ td.papers {
   		<td class="papers">
         <div align="justify" class="STYLE4">
           <p></p>
-		      <span style="font-size: 12pt; font-family: Times New Roman;">
+		      <span style="font-size: 12pt;">
 						<strong>How Do System Administrators Resolve Access-Denied Issues in the Real World? </strong> [<a href="papers/chi17.pdf" target="_blank">pdf</a> | <a href="papers/chi17.ps" target="_blank">ps</a> | <a href="papers/chi17.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Han Min Naing, Le Lu, and Yuanyuan Zhou
@@ -142,7 +142,7 @@ td.papers {
 			<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
-					<span style="font-size: 12pt; font-family: Times New Roman;">
+					<span style="font-size: 12pt;">
 						<strong>Early Detection of Configuration Errors to Reduce Failure Damage</strong> [<a href="papers/osdi16.pdf" target="_blank">pdf</a> | <a href="papers/osdi16.ps" target="_blank">ps</a> | <a href="papers/osdi16.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Xinxin Jin, Peng Huang, Yuanyuan Zhou, Shan Lu, Long Jin, and Shankar Pasupathy
@@ -160,7 +160,7 @@ td.papers {
 			<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
-					<span style="font-size: 12pt; font-family: Times New Roman;">
+					<span style="font-size: 12pt;">
 						<strong>DefDroid: Towards a More Defensive Mobile OS Against Disruptive App Behavior</strong> [<a href="papers/mobisys16.pdf" target="_blank">pdf</a> | <a href="papers/mobisys16.ps" target="_blank">ps</a> | <a href="papers/mobisys16.bib" target="_blank">bib</a>]
 						<br>
 						Peng Huang, Tianyin Xu, Xinxin Jin, and Yuanyuan Zhou
@@ -176,7 +176,7 @@ td.papers {
 			<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
-					<span style="font-size: 12pt; font-family: Times New Roman;">
+					<span style="font-size: 12pt;">
 						<strong>NChecker: Saving Mobile App Developers from Network Disruptions</strong> [<a href="papers/eurosys16.pdf" target="_blank">pdf</a> | <a href="papers/eurosys16.ps" target="_blank">ps</a> | <a href="papers/eurosys16.bib" target="_blank">bib</a>]
 						<br>
 						Xinxin Jin, Peng Huang, Tianyin Xu, and Yuanyuan Zhou
@@ -192,7 +192,7 @@ td.papers {
 			<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
-					<span style="font-size: 12pt; font-family: Times New Roman;">
+					<span style="font-size: 12pt;">
 						<strong>Exploring Cross-Application Cellular Traffic Optimization with Baidu TrafficGuard</strong> [<a href="papers/nsdi16.pdf" target="_blank">pdf</a> | <a href="papers/nsdi16.ps" target="_blank">ps</a> | <a href="papers/nsdi16.bib" target="_blank">bib</a>]
 						<br>
 						Zhenhua Li, Weiwei Wang, Tianyin Xu, Xin Zhong, Xiang-Yang Li, Yunhao Liu, Christo Wilson, and Ben Y. Zhao
@@ -208,7 +208,7 @@ td.papers {
 			<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
-					<span style="font-size: 12pt; font-family: Times New Roman;">
+					<span style="font-size: 12pt;">
 						<strong>Offline Downloading in China: A Comparative Study</strong> [<a href="papers/imc15.pdf" target="_blank">pdf</a> | <a href="papers/imc15.ps" target="_blank">ps</a> | <a href="papers/imc15.bib" target="_blank">bib</a>]
 						<br>
 						Zhenhua Li, Christo Wilson, Tianyin Xu, Yao Liu, Zhen Lu, and Yinlong Wang
@@ -224,7 +224,7 @@ td.papers {
 			<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
-					<span style="font-size: 12pt; font-family: Times New Roman;">
+					<span style="font-size: 12pt;">
 						<strong>Hey, You Have Given Me Too Many Knobs! Understanding and Dealing with Over-Designed Configuration in System Software</strong> [<a href="papers/fse15.pdf" target="_blank">pdf</a> | <a href="papers/fse15.ps" target="_blank">ps</a> | <a href="papers/fse15.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Long Jin, Xuepeng Fan, Yuanyuan Zhou, Shankar Pasupathy, and Rukma Talwadker
@@ -240,7 +240,7 @@ td.papers {
 			<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
-					<span style="font-size: 12pt; font-family: Times New Roman;">
+					<span style="font-size: 12pt;">
 						<strong>Systems Approaches to Tackling Configuration Errors: A Survey</strong></span> [<a href="papers/csur.pdf" target="_blank">pdf</a> | <a href="papers/csur.ps" target="_blank">ps</a> | <a href="papers/csur.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu and Yuanyuan Zhou
@@ -256,7 +256,7 @@ td.papers {
 			<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
-					<span style="font-size: 12pt; font-family: Times New Roman;">
+					<span style="font-size: 12pt;">
 						<strong>Towards Network-level Efficiency for Cloud Storage Services</strong> [<a href="papers/imc14.pdf" target="_blank">pdf</a> | <a href="papers/imc14.ps" target="_blank">ps</a> | <a href="papers/imc14.bib" target="_blank">bib</a>]
 						<br>
 						Zhenhua Li, Cheng Jin, Tianyin Xu, Christo Wilson, Yao Liu, Linsong Cheng, Yunhao Liu, Yafei Dai, and Zhi-Li Zhang
@@ -272,7 +272,7 @@ td.papers {
 			<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
-					<span style="font-size: 12pt; font-family: Times New Roman;">
+					<span style="font-size: 12pt;">
 						<strong> EnCore: Exploiting System Environment and Correlation Information for Misconfiguration Detection </strong> [<a href="papers/asplos14.pdf" target="_blank">pdf</a> | <a href="papers/asplos14.ps" target="_blank">ps</a> | <a href="papers/asplos14.bib" target="_blank">bib</a>]
 						<br>
 						Jiaqi Zhang, Lakshminarayanan Renganarayana, Xiaolan Zhang, Niyu Ge, Vasanth Bala, Tianyin Xu, and Yuanyuan Zhou
@@ -288,7 +288,7 @@ td.papers {
 			<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
-					<span style="font-size: 12pt; font-family: Times New Roman;">
+					<span style="font-size: 12pt;">
 						<strong> Do Not Blame Users for Misconfigurations </strong> [<a href="papers/sosp13.pdf" target="_blank">pdf</a> | <a href="papers/sosp13.ps" target="_blank">ps</a> | <a href="papers/sosp13.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Jiaqi Zhang, Peng Huang, Jing Zheng, Tianwei Sheng, Ding Yuan, Yuanyuan Zhou, and Shankar Pasupathy
