optional papers on chaos for anjali

--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -860,6 +860,41 @@
                             </li>
                             <li> A. Basiri, M. Behnam, R. d. Rooij, L. Hochstein, L. Kosewski, J. Reynolds, and C. Rosenthal,
                                 <a class="paperlink" href="https://ieeexplore.ieee.org/document/7436642/" target="_blank">Chaos Engineering</a>, IEEE Software, Vol. 33, Issue 3, Page 35-41, May 2016.
+                                <p></p>
+                            </li>
+                            <li> (Optional) the original Molly paper:
+                                 <p></p>
+                              <ul>
+                                <li>P. Alvaro, J. Rosen, and J. M. Hellerstein.,
+                                <a class="paperlink" href="https://people.ucsc.edu/~palvaro/molly.pdf" target="_blank">Lineage-driven Fault Injection</a>,
+                                In Proceedings of the 2015 ACM SIGMOD International Conference on Management of Data (SIGMOD’15), May 2015.
+                                  <p></p>
+                                </li>
+                              </ul>
+                            </li>
+                            <li> (Optional) related papers on chaos engineering:
+                                 <p></p>
+                              <ul>
+                                <li>P. Alvaro and S. Tymon,
+                                <a class="paperlink" href="https://cacm.acm.org/magazines/2018/1/223887-abstracting-the-geniuses-away-from-failure-testing/fulltext" target="_blank">Abstracting the Geniuses Away from Failure Testing</a>,
+                                Communications of the ACM (CACM), January 2018.
+                                  <p></p>
+                                </li>
+                                <li>J. Allspaw,
+                                <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=2347751" target="_blank">Fault Injection in Production</a>,
+                                Communications of the ACM (CACM), October 2012.
+                                  <p></p>
+                                </li>
+                                <li> V. Heorhiadi, S. Rajagopalan, H. Jamjoom, M. K. Reiter, and V. Sekar,
+                                <a class="paperlink" href="https://ieeexplore.ieee.org/document/7536505/" target="_blank">Gremlin: Systematic Resilience Testing of Microservices</a>,
+                                  In Proceedings of the IEEE 36th International Conference on Distributed Computing Systems (ICDCS), June 2016.
+                                  <p></p>
+                                </li>
+                                <li> H. S. Gunawi, T. Do, J. M. Hellerstein, I. Stoica, D. Borthakur, and J. Robbins,
+                                  <a class="paperlink" href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2011/EECS-2011-87.pdf" target="_blank">Failure as a Service (FaaS): A Cloud Service for Large-Scale, Online Failure Drills</a>,
+                                  Tech Report No. UCB/EECS-2011-87, University of California at Berkeley, July 2011.
+                                </li>
+                              </ul>
                             </li>
                         </ul>
                     </td>
