--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -867,7 +867,7 @@
                               <ul>
                                 <li>P. Alvaro, J. Rosen, and J. M. Hellerstein.,
                                 <a class="paperlink" href="https://people.ucsc.edu/~palvaro/molly.pdf" target="_blank">Lineage-driven Fault Injection</a>,
-                                In Proceedings of the 2015 ACM SIGMOD International Conference on Management of Data (SIGMOD’15), May 2015.
+                                In Proceedings of the 2015 ACM SIGMOD International Conference on Management of Data (SIGMOD '15), May 2015.
                                   <p></p>
                                 </li>
                               </ul>
@@ -887,7 +887,7 @@
                                 </li>
                                 <li> V. Heorhiadi, S. Rajagopalan, H. Jamjoom, M. K. Reiter, and V. Sekar,
                                 <a class="paperlink" href="https://ieeexplore.ieee.org/document/7536505/" target="_blank">Gremlin: Systematic Resilience Testing of Microservices</a>,
-                                  In Proceedings of the IEEE 36th International Conference on Distributed Computing Systems (ICDCS), June 2016.
+                                  In Proceedings of the IEEE 36th International Conference on Distributed Computing Systems (ICDCS '16'), June 2016.
                                   <p></p>
                                 </li>
                                 <li> H. S. Gunawi, T. Do, J. M. Hellerstein, I. Stoica, D. Borthakur, and J. Robbins,
