--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -887,7 +887,7 @@
                                 </li>
                                 <li> V. Heorhiadi, S. Rajagopalan, H. Jamjoom, M. K. Reiter, and V. Sekar,
                                 <a class="paperlink" href="https://ieeexplore.ieee.org/document/7536505/" target="_blank">Gremlin: Systematic Resilience Testing of Microservices</a>,
-                                  In Proceedings of the IEEE 36th International Conference on Distributed Computing Systems (ICDCS '16'), June 2016.
+                                  In Proceedings of the IEEE 36th International Conference on Distributed Computing Systems (ICDCS '16), June 2016.
                                   <p></p>
                                 </li>
                                 <li> H. S. Gunawi, T. Do, J. M. Hellerstein, I. Stoica, D. Borthakur, and J. Robbins,
