--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -530,6 +530,11 @@
                                   In Proceedings of the 6th Symposium on Operating
                                   Systems Design and Implementation (OSDI '04),
                                   December 2004.
+                                  <p></p>
+                            </li>
+                            <li>
+                              <b>Read the postmortem:</b> <a class="paperlink" href="https://aws.amazon.com/message/41926/" target="_blank">Summary of the Amazon S3 Service Disruption in the Northern Virginia (US-EAST-1) Region</a>, February 2017.
+                              (<a class="paperlink" href="https://news.ycombinator.com/item?id=13775667" target="_blank">discussions on Hacker News</a>)
                             </li>
                         </ul>
                     </td>
