--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -534,6 +534,18 @@
                             <li>
                               <b>Read the postmortem:</b> <a class="paperlink" href="https://aws.amazon.com/message/41926/" target="_blank">Summary of the Amazon S3 Service Disruption in the Northern Virginia (US-EAST-1) Region</a>, February 2017.
                               (<a class="paperlink" href="https://news.ycombinator.com/item?id=13775667" target="_blank">discussions on Hacker News</a>)
+                              <p></p>
+                            </li>
+                            <li> (Optional) related papers:
+                                 <p></p>
+                              <ul>
+                                  <li> D. A. Patterson et al.,
+                                    <a class="paperlink" href="http://roc.cs.berkeley.edu/papers/ROC_TR02-1175.pdf" target="_blank">
+                                      Recovery Oriented Computing (ROC): Motivation, Definition, Techniques, and Case Studies </a>,
+                                      Tech Report UCB//CSD-02-1175, University of California Berkeley, March 2002.
+                                    <p></p>
+                                  </li>
+                              </ul>
                             </li>
                         </ul>
                     </td>
