--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -543,6 +543,7 @@
                                     <a class="paperlink" href="http://roc.cs.berkeley.edu/papers/ROC_TR02-1175.pdf" target="_blank">
                                       Recovery Oriented Computing (ROC): Motivation, Definition, Techniques, and Case Studies </a>,
                                       Tech Report UCB//CSD-02-1175, University of California Berkeley, March 2002.
+                                      (<a class="paperlink" href="http://roc.cs.berkeley.edu/" target="_blank">the ROC project website</a>)
                                     <p></p>
                                   </li>
                               </ul>
