--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -450,12 +450,43 @@
             </tbody>
         </table>
 
-        <h2>Configuration and Operation Errors</h2>
+        <h2>Project Workshop</h2>
 
         <table>
             <tbody>
                 <tr>
                     <td class="date"><a name="4tu">Tue<br>9/18</a></td>
+                    <td class="papers">
+
+                        <ul>
+                            <li>We will discuss all the project proposals (anonymized):
+                              <p></p>
+                           <ul>
+                             <li> what is the technical problem?
+                                  <p></p>
+                             </li>
+                             <li> what is the contributions in terms of research or engineering?
+                                  <p></p>
+                             </li>
+                             <li> what is their execution plan?
+                                  <p></p>
+                             </li>
+                           </ul>
+                                Please give me an email if you want to make your project confidential and exclude from the workshop.
+                            </li>
+                        </ul>
+
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>Configuration and Operation Errors</h2>
+
+        <table>
+            <tbody>
+                <tr>
+                    <td class="date"><a name="4th">Thu<br>9/20</a></td>
                     <td class="papers">
                         <ul>
                             <li> T. Xu, X. Jin, P. Huang, Y. Zhou, S. Lu, L. Jin,
@@ -507,13 +538,9 @@
                 </tr>
 
                 <tr>
-                    <td class="date"><a name="4th">Thu<br>9/20</a></td>
+                    <td class="date"><a name="5tu">Tue<br>9/25</a></td>
                     <td class="papers">
                         <ul>
-                            <li>
-                                <b>A workshop on the course projects.</b>
-                                <p></p>
-                            </li>
                             <li> A. B. Brown and D. A. Patterson,
                                 <a class="paperlink" href="http://roc.cs.berkeley.edu/papers/brown-emailundo-usenix03.pdf" target="_blank">Undo for
                                   Operators: Building an Undoable E-mail Store</a>,
@@ -560,7 +587,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td class="date"><a name="5tu">Tue<br>9/25</a></td>
+                    <td class="date"><a name="5th">Thu<br>9/27</a></td>
                     <td class="papers">
                         <ul>
                             <li>
@@ -612,7 +639,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td class="date"><a name="5th">Thu<br>9/27</a></td>
+                    <td class="date"><a name="6tu">Tue<br>10/2</a></td>
                     <td class="papers">
                         <ul>
                             <li> L. Fang, K. Nguyen, G. Xu, B. Demsky, and S. Lu,
@@ -634,7 +661,7 @@
                 </tr>
 
                 <tr>
-                    <td class="date"><a name="6tu">Tue<br>10/2</a></td>
+                    <td class="date"><a name="6th">Thu<br>10/4</a></td>
                     <td class="papers">
                         <ul>
 
@@ -661,12 +688,30 @@
             </tbody>
         </table>
 
+        <h2>Hack Day</h2>
+
+        <table>
+            <tbody>
+                <tr>
+                    <td class="date"><a name="7tu">Tue<br>10/9</a></td>
+                    <td class="papers">
+
+                        <ul>
+                            <li> Work on the projects</font>
+                            </li>
+                        </ul>
+
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
         <h2>Software Testing</h2>
 
         <table>
             <tbody>
                 <tr>
-                    <td class="date"><a name="6th">Thu<br>10/4</a></td>
+                    <td class="date"><a name="7th">Thu<br>10/11</a></td>
                     <td class="papers">
                         <ul>
                             <li>
@@ -702,30 +747,12 @@
             </tbody>
         </table>
 
-        <h2>Hack Day</h2>
-
-        <table>
-            <tbody>
-                <tr>
-                    <td class="date"><a name="7tu">Tue<br>10/9</a></td>
-                    <td class="papers">
-
-                        <ul>
-                            <li> Work on the projects</font>
-                            </li>
-                        </ul>
-
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
         <h2>Failure Recovery</h2>
 
         <table>
             <tbody>
                 <tr>
-                    <td class="date"><a name="7th">Thu<br>10/11</a></td>
+                    <td class="date"><a name="8tu">Tue<br>10/16</a></td>
 
                     <td class="papers">
                         <ul>
@@ -752,7 +779,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td class="date"><a name="8tu">Tue<br>10/16</a></td>
+                    <td class="date"><a name="8th">Thu<br>10/18</a></td>
                     <td class="papers">
                         <ul>
                             <li> H. Liu, X. Wang, G. Li, S. Lu, F. Ye, and C. Tian,
@@ -760,6 +787,14 @@
                                   Time-of-fault Bugs in Cloud Systems</a>, In Proceedings of the
                                   23rd ACM International Conference on Architectural Support
                                   for Programming Languages and Operating Systems (ASPLOS '18), March 2018.
+                                <p></p>
+                            </li>
+                            <li> T. Leesatapornwongsa, M. Hao, P. Joshi,
+                              J. F. Lukman, and H. S. Gunawi,
+                                <a class="paperlink" href="https://www.usenix.org/system/files/conference/osdi14/osdi14-paper-leesatapornwongsa.pdf" target="_blank">SAMC: Semantic-Aware Model Checking for Fast
+                                  Discovery of Deep Bugs in Cloud Systems</a>, In Proceedings of the
+                                  11th USENIX Symposium on
+                                  Operating Systems Design and Implementation (OSDI '14), October 2014.
                                 <p></p>
                             </li>
                             <li> C. Sadowski, E. Aftandilian, A. Eagle, L. Miller-Cushon, and C. Jaspan,
@@ -770,26 +805,6 @@
                         </ul>
                     </td>
                 </tr>
-
-                <tr>
-                    <td class="date"><a name="8th">Thu<br>10/18</a></td>
-                    <td class="papers">
-                        <ul>
-
-                          <li> T. Leesatapornwongsa, M. Hao, P. Joshi,
-                            J. F. Lukman, and H. S. Gunawi,
-                              <a class="paperlink" href="https://www.usenix.org/system/files/conference/osdi14/osdi14-paper-leesatapornwongsa.pdf" target="_blank">SAMC: Semantic-Aware Model Checking for Fast
-                                Discovery of Deep Bugs in Cloud Systems</a>, In Proceedings of the
-                                11th USENIX Symposium on
-                                Operating Systems Design and Implementation (OSDI '14), October 2014.
-                              <p></p>
-                          </li>
-                            <li> TBD
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-
             </tbody>
         </table>
 
