--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -582,7 +582,7 @@
             </tbody>
         </table>
 
-        <h2>Network Failures</h2>
+        <h2>Resource and Performance Issues</h2>
 
         <table>
             <tbody>
@@ -590,21 +590,75 @@
                     <td class="date"><a name="5th">Thu<br>9/27</a></td>
                     <td class="papers">
                         <ul>
-                            <li>
-                                <b><a class="paperlink" href="https://justinmeza.com/" target="_blank">Justin Meza</a> from Facebook will give a guest lecture on Network Storms at Facebook.</b>
+                            <li> L. Fang, K. Nguyen, G. Xu, B. Demsky, and S. Lu,
+                                <a class="paperlink" href="https://people.cs.uchicago.edu/~shanlu/paper/sosp15-itask.pdf" target="_blank">Interruptible
+                                  Tasks: Treating Memory Pressure As Interrupts
+                                  for Highly Scalable Data-Parallel Programs</a>,
+                                  In Proceedings of the 25th ACM Symposium on Operating
+                                  Systems Principles (SOSP '15), October 2015.
+                                  <p></p>
+                            </li>
+                            <li> M. Ulrich,
+                                <a class="paperlink" href="https://landing.google.com/sre/book/chapters/addressing-cascading-failures.html" target="_blank">Addressing
+                                  Cascading Failures</a>,
+                                  Site Reliability Engineering: How Google Runs Production Systems,
+                                  O'Reilly, April 2016.
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="date"><a name="6tu">Tue<br>10/2</a></td>
+                    <td class="papers">
+                        <ul>
+
+                            <li> M. Attariyan, M. Chow, and J. Flinn,
+                                <a class="paperlink" href="https://www.usenix.org/system/files/conference/osdi12/osdi12-final-33.pdf" target="_blank">X-ray:
+                                  Automating Root-Cause Diagnosis of Performance
+                                  Anomalies in Production Software</a>,
+                                  In Proceedings of the 10th USENIX Symposium on
+                                  Operating Systems Design and Implementation
+                                  (OSDI '12), November 2012.
                                 <p></p>
                             </li>
-                            <li> P. Bailis and K. Kingsbury,
-                                <a class="paperlink" href="https://cacm.acm.org/magazines/2014/9/177925-the-network-is-reliable/abstract" target="_blank">The
-                                  Network Is Reliable</a>,
-                                  Communications of the ACM (CACM), Vol. 57 No. 9, Pages 48-55, September 2014.
-                                  <p></p>
+                            <li> J. Li, Y. Chen, H. Liu, S. Lu, Y. Zhang,
+                              H. S. Gunawi, X. Gu, X. Lu, and D. Lu,
+                                <a class="paperlink" href="https://people.cs.uchicago.edu/~shanlu/paper/eurosys18.pdf" target="_blank">PCatch:
+                                  Automatically Detecting Performance Cascading Bugs
+                                  in Cloud Systems</a>,
+                                  In Proceedings of the 2018 European Conference on Computer Systems (EuroSys '18), April 2018.
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+
+            </tbody>
+        </table>
+
+        <h2>Network Failures</h2>
+
+        <table>
+            <tbody>
+                <tr>
+                    <td class="date"><a name="6th">Thu<br>10/4</a></td>
+                    <td class="papers">
+                        <ul>
+                            <li>
+                                <b><a class="paperlink" href="http://web.engr.illinois.edu/~prabhum2/" target="_blank">Santhosh</a> will lead the discussion of this class.</b>
+                                <p></p>
                             </li>
                             <li> R. Govindan, I. Minei, M. Kallahalla, B. Koley, and A. Vahdat,
                               <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=2934891" target="_blank">
                                 Evolve or Die: High-Availability Design Principles Drawn from Googles Network Infrastructure</a>,
                                 In Proceedings of the 2016 ACM SIGCOMM Conference (SIGCOMM '16), August, 2016.
                               <p></p>
+                            </li>
+                            <li> P. Bailis and K. Kingsbury,
+                                <a class="paperlink" href="https://cacm.acm.org/magazines/2014/9/177925-the-network-is-reliable/abstract" target="_blank">The
+                                  Network Is Reliable</a>,
+                                  Communications of the ACM (CACM), Vol. 57 No. 9, Pages 48-55, September 2014.
+                                  <p></p>
                             </li>
                             <li> (Optional) related studies on network failures:
                                  <p></p>
@@ -631,60 +685,6 @@
                         </ul>
                     </td>
                 </tr>
-            </tbody>
-        </table>
-
-        <h2>Resource and Performance Issues</h2>
-
-        <table>
-            <tbody>
-                <tr>
-                    <td class="date"><a name="6tu">Tue<br>10/2</a></td>
-                    <td class="papers">
-                        <ul>
-                            <li> L. Fang, K. Nguyen, G. Xu, B. Demsky, and S. Lu,
-                                <a class="paperlink" href="https://people.cs.uchicago.edu/~shanlu/paper/sosp15-itask.pdf" target="_blank">Interruptible
-                                  Tasks: Treating Memory Pressure As Interrupts
-                                  for Highly Scalable Data-Parallel Programs</a>,
-                                  In Proceedings of the 25th ACM Symposium on Operating
-                                  Systems Principles (SOSP '15), October 2015.
-                                  <p></p>
-                            </li>
-                            <li> M. Ulrich,
-                                <a class="paperlink" href="https://landing.google.com/sre/book/chapters/addressing-cascading-failures.html" target="_blank">Addressing
-                                  Cascading Failures</a>,
-                                  Site Reliability Engineering: How Google Runs Production Systems,
-                                  O'Reilly, April 2016.
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td class="date"><a name="6th">Thu<br>10/4</a></td>
-                    <td class="papers">
-                        <ul>
-
-                            <li> M. Attariyan, M. Chow, and J. Flinn,
-                                <a class="paperlink" href="https://www.usenix.org/system/files/conference/osdi12/osdi12-final-33.pdf" target="_blank">X-ray:
-                                  Automating Root-Cause Diagnosis of Performance
-                                  Anomalies in Production Software</a>,
-                                  In Proceedings of the 10th USENIX Symposium on
-                                  Operating Systems Design and Implementation
-                                  (OSDI '12), November 2012.
-                                <p></p>
-                            </li>
-                            <li> J. Li, Y. Chen, H. Liu, S. Lu, Y. Zhang,
-                              H. S. Gunawi, X. Gu, X. Lu, and D. Lu,
-                                <a class="paperlink" href="https://people.cs.uchicago.edu/~shanlu/paper/eurosys18.pdf" target="_blank">PCatch:
-                                  Automatically Detecting Performance Cascading Bugs
-                                  in Cloud Systems</a>,
-                                  In Proceedings of the 2018 European Conference on Computer Systems (EuroSys '18), April 2018.
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-
             </tbody>
         </table>
 
