--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -586,27 +586,6 @@
 
         <table>
             <tbody>
-                <tr>
-                    <td class="date"><a name="5th">Thu<br>9/27</a></td>
-                    <td class="papers">
-                        <ul>
-                            <li> L. Fang, K. Nguyen, G. Xu, B. Demsky, and S. Lu,
-                                <a class="paperlink" href="https://people.cs.uchicago.edu/~shanlu/paper/sosp15-itask.pdf" target="_blank">Interruptible
-                                  Tasks: Treating Memory Pressure As Interrupts
-                                  for Highly Scalable Data-Parallel Programs</a>,
-                                  In Proceedings of the 25th ACM Symposium on Operating
-                                  Systems Principles (SOSP '15), October 2015.
-                                  <p></p>
-                            </li>
-                            <li> M. Ulrich,
-                                <a class="paperlink" href="https://landing.google.com/sre/book/chapters/addressing-cascading-failures.html" target="_blank">Addressing
-                                  Cascading Failures</a>,
-                                  Site Reliability Engineering: How Google Runs Production Systems,
-                                  O'Reilly, April 2016.
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
 
                 <tr>
                     <td class="date"><a name="6tu">Tue<br>10/2</a></td>
@@ -628,6 +607,33 @@
                                   Automatically Detecting Performance Cascading Bugs
                                   in Cloud Systems</a>,
                                   In Proceedings of the 2018 European Conference on Computer Systems (EuroSys '18), April 2018.
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="date"><a name="5th">Thu<br>9/27</a></td>
+                    <td class="papers">
+                        <ul>
+                            <li>
+                              <a class="paperlink" href="http://web.engr.illinois.edu/~lexu1/" target="_blank">Le</a>
+                              and <a class="paperlink" href="http://ry2.web.engr.illinois.edu/" target="_blank">Rui</a> will lead the discussion.
+                              <p></p>
+                            </li>
+                            <li> L. Fang, K. Nguyen, G. Xu, B. Demsky, and S. Lu,
+                                <a class="paperlink" href="https://people.cs.uchicago.edu/~shanlu/paper/sosp15-itask.pdf" target="_blank">Interruptible
+                                  Tasks: Treating Memory Pressure As Interrupts
+                                  for Highly Scalable Data-Parallel Programs</a>,
+                                  In Proceedings of the 25th ACM Symposium on Operating
+                                  Systems Principles (SOSP '15), October 2015.
+                                  <p></p>
+                            </li>
+                            <li> M. Ulrich,
+                                <a class="paperlink" href="https://landing.google.com/sre/book/chapters/addressing-cascading-failures.html" target="_blank">Addressing
+                                  Cascading Failures</a>,
+                                  Site Reliability Engineering: How Google Runs Production Systems,
+                                  O'Reilly, April 2016.
                             </li>
                         </ul>
                     </td>
