--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -755,12 +755,42 @@
             </tbody>
         </table>
 
-        <h2>Failure Recovery</h2>
+
+        <h2>Project Conference (Session 1)</h2>
 
         <table>
             <tbody>
                 <tr>
                     <td class="date"><a name="8tu">Tue<br>10/16</a></td>
+                    <td class="papers">
+
+                        <ul>
+                            <li> Sesssion 1</font>
+                            </li>
+                        </ul>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="date"><a name="8th">Thu<br>10/18</a></td>
+                    <td class="papers">
+
+                        <ul>
+                            <li> Session 2</font>
+                            </li>
+                        </ul>
+
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>Failure Recovery</h2>
+
+        <table>
+            <tbody>
+                <tr>
+                    <td class="date"><a name="9tu">Tue<br>10/23</a></td>
 
                     <td class="papers">
                         <ul>
@@ -787,7 +817,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td class="date"><a name="8th">Thu<br>10/18</a></td>
+                    <td class="date"><a name="9th">Thu<br>10/25</a></td>
                     <td class="papers">
                         <ul>
                             <li> H. Liu, X. Wang, G. Li, S. Lu, F. Ye, and C. Tian,
@@ -822,7 +852,7 @@
             <tbody>
 
                 <tr>
-                    <td class="date"><a name="9tu">Tue<br>10/23</a></td>
+                    <td class="date"><a name="10tu">Tue<br>10/30</a></td>
                     <td class="papers">
                         <ul>
 
@@ -860,7 +890,7 @@
       <table>
           <tbody>
               <tr>
-                  <td class="date"><a name="9th">Thu<br>10/25</a></td>
+                  <td class="date"><a name="10th">Thu<br>11/1</a></td>
 
                   <td class="papers">
                       <ul>
@@ -890,7 +920,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td class="date"><a name="10tu">Tue<br>10/30</a></td>
+                    <td class="date"><a name="11tu">Tue<br>11/6</a></td>
                     <td class="papers">
                         <ul>
                             <li> P. Alvaro, K. Andrus, C. S. Casey, R. A. Basiri, and L. Hochstein,
@@ -941,7 +971,7 @@
                 </tr>
 
                 <tr>
-                    <td class="date"><a name="10th">Thu<br>11/1</a></td>
+                    <td class="date"><a name="11th">Thu<br>11/8</a></td>
                     <td class="papers">
                         <ul>
 
@@ -952,16 +982,6 @@
   Large Scale Web Services</a>, In Proceedings of the 12th USENIX Symposium on Operating Systems Design and Implementation (OSDI '16), November 2016.
                                 <p></p>
                             </li>
-                            <li> TBD
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td class="date"><a name="11tu">Tue<br>11/6</a></td>
-                    <td class="papers">
-                        <ul>
                             <li> K. Veeraraghavan, J. Meza, S. Michelson, S. Panneerselvam, A. Gyori, D. Obenshain, Y. J. Song, and T. Xu,
                                  Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently, In Proceedings of the 13th USENIX Symposium on Operating Systems Design and Implementation (OSDI '18), October 2018.
                               <p></p>
@@ -974,7 +994,6 @@
                         </ul>
                     </td>
                 </tr>
-
             </tbody>
         </table>
 
@@ -983,7 +1002,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td class="date"><a name="11th">Thu<br>11/8</a></td>
+                    <td class="date"><a name="12tu">Tue<br>11/13</a></td>
                     <td class="papers">
                         <ul>
 
@@ -996,22 +1015,12 @@
                             </li>
                             <li> C. Scott, A. Panda, V. Brajkovic, G. Necula, A. Krishnamurthy, and S. Shenker,
                                 <a class="paperlink" href="https://www.usenix.org/system/files/conference/nsdi16/nsdi16-paper-scott.pdf" target="_blank">Minimizing Faulty Executions of Distributed Systems</a>, In Proceedings of the 13th USENIX Symposium on Networked Systems Design and Implementation (NSDI '16), March 2016.
+                                <p></p>
                             </li>
-                        </ul>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td class="date"><a name="12tu">Tue<br>11/13</a></td>
-                    <td class="papers">
-                        <ul>
-
                             <li> D. Yuan, S. Park, P. Huang, Y. Liu, M. M. Lee, X. Tang, Y. Zhou, and S. Savage,
                                 <a class="paperlink" href="https://www.usenix.org/system/files/conference/osdi12/osdi12-final-109.pdf" target="_blank">Be
   Conservative: Enhancing Failure Diagnosis with Proactive Logging</a>, In Proceedings of the 10th USENIX Symposium on Operating Systems Design and Implementation (OSDI '12), November 2012.
                                 <p></p>
-                            </li>
-                            <li> TBD
                             </li>
                         </ul>
                     </td>
@@ -1030,6 +1039,7 @@
                             <li> J. Kaldor, J. Mace, M. Bejda, E. Gao, W. Kuropatwa, J. O'Neill, K. W. Ong, B. Schaller, P. Shan, B. Viscomi, V. Venkataraman, K. Veeraraghavan, and Y. J. Song,
                                 <a class="paperlink" href="https://dl.acm.org/authorize.cfm?key=N47147" target="_blank">Canopy:
   An End-to-End Performance Tracing And Analysis System</a>, In Proceedings of the 26th ACM Symposium on Operating Systems Principles (SOSP '17), October 2017.
+                                <p></p>
                             </li>
                         </ul>
                     </td>
@@ -1126,7 +1136,7 @@
             </tbody>
         </table>
 
-        <h2>Buffering</h2>
+        <h2>Final Presentation</h2>
 
         <table>
             <tbody>
@@ -1135,25 +1145,17 @@
                     <td class="papers">
 
                         <ul>
-                            <li> TBA </li>
+                            <li> Session 1 </li>
                         </ul>
 
                     </td>
                 </tr>
-            </tbody>
-        </table>
-
-        <h2>Presentation</h2>
-
-        <table>
-            <tbody>
                 <tr>
                     <td class="date"><a name="15tu">Tue<br>12/11</a></td>
                     <td class="papers">
 
                         <ul>
-                            <li> <font color="red"><b>Project presentation</b></font>
-                            </li>
+                            <li> Session 2 </li>
                         </ul>
 
                     </td>
