--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -756,7 +756,7 @@
         </table>
 
 
-        <h2>Project Conference (Session 1)</h2>
+        <h2>Project Symposium</h2>
 
         <table>
             <tbody>
