--- a/cs598-fa18/project.html
+++ b/cs598-fa18/project.html
@@ -17,21 +17,45 @@
         <li>
             <b><font color="red">9/5 (Wed) 8:00am:</font> Form project group</b>
             <br>
-            (send me an email about your group)
+            <ul>
+                <li>
+                    send me an email about your group.
+                </li>
+            </ul>
         </li>
         <li>
             <b><font color="black">9/14 (Fri) 8:00am:</font> Submit project proposal (1 page) </b>
             <br>
-            (please talk to me beforehand)
+            <ul>
+                <li>
+                    Please discuss with me before deciding on the projects.
+                </li>
+            </ul>
         </li>
         <li>
             <b><font color="black">10/12 (Fri) 8:00am:</font> first checkpoint report (1 page) </b>
             <br>
+            <ul>
+                <li>
+                    For system/tool building projects, you must show prototypes.
+                </li>
+                <li>
+                    For study-based projects, you must show general statistics of your datasets,
+                    and concrete examples or case studies.
+                </li>
+            </ul>
         </li>
         <li>
             <b><font color="black">11/16 (Fri) 8:00am:</font> second checkpoint report (1 page) </b>
             <br>
-            (you must include primary results)
+            <ul>
+                <li>
+                    For system/tool building projects, you must show primary results.
+                </li>
+                <li>
+                    For study-based projects, you must show your numbers and findings.
+                </li>
+            </ul>
         </li>
         <li>
             <b><font color="black">12/11 (Tue) 14:00pm:</font></b> Present your project (15 min)
