--- a/cs598-fa18/project.html
+++ b/cs598-fa18/project.html
@@ -15,7 +15,7 @@
     <h2>Deadlines</h2>
     <ol start="0">
         <li>
-            <b><font color="red">9/5 (Wed) 8:00am:</font> Form project group</b>
+            <b><font color="black">9/5 (Wed) 8:00am:</font> Form project group</b>
             <br>
             <ul>
                 <li>
@@ -33,7 +33,7 @@
             </ul>
         </li>
         <li>
-            <b><font color="black">10/12 (Fri) 8:00am:</font> first checkpoint report (1 page) </b>
+            <b><font color="red">10/12 (Fri) 8:00am:</font> first checkpoint report (1 page) </b>
             <br>
             <ul>
                 <li>
