kartik and frank

--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -765,7 +765,7 @@
                     <td class="papers">
 
                         <ul>
-                            <li> Sesssion 1</font>
+                            <li> Session 1</font>
                             </li>
                         </ul>
 
@@ -923,6 +923,13 @@
                     <td class="date"><a name="11tu">Tue<br>11/6</a></td>
                     <td class="papers">
                         <ul>
+                            <li>
+                              <b>
+                                <a class="paperlink" href="http://palani2.web.engr.illinois.edu/" target="_blank">Kartik</a>
+                                and <a class="paperlink" href="https://ece.illinois.edu/directory/profile/hnguye11" target="_blank">Frank</a> will lead the discussion.
+                                <p></p>
+                              </b>
+                            </li>
                             <li> P. Alvaro, K. Andrus, C. S. Casey, R. A. Basiri, and L. Hochstein,
                                 <a class="paperlink" href="https://people.ucsc.edu/~palvaro/socc16.pdf" target="_blank">Automating
       Failure Testing Research at Internet Scale</a>, In Proceedings of the 6th ACM Symposium on Cloud Computing (SOCC '16), October 2016.
